# rsomics-bam-import

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  encode.rs  flags.rs  header.rs  lib.rs  writer.rs
tests/: compat.rs
tests/golden/: pe_r1.fastq  pe_r2.fastq  se.fastq
