[package]
name = "rsomics-bam-import"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-import"
authors = ["Zane Leong <efd@live.com>"]
description = "Convert FASTQ to unaligned BAM — Rust port of samtools import"

[[bin]]
name = "rsomics-bam-import"
path = "src/main.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
rsomics-help = { version = "0.3" }
rsomics-seqio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noodles = { version = "0.110", features = ["sam", "bam", "bgzf"] }
bstr = "1"

[dev-dependencies]
tempfile = "3"
